--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,109 +1,198 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{wang2024automated,
+  bibtex_show = {true},
+  title       = {Automated Generation of Multiple-Choice Cloze Questions for Assessing English Vocabulary Using GPT-turbo 3.5},
+  author      = {Wang, Qiao and Rose, Ralph and Orita, Naho and Sugawara, Ayaka},
+  journal     = {arXiv preprint arXiv:2403.02078},
+  year        = {2024}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{li2023mapping,
+  bibtex_show = {true},
+  title       = {Mapping the research trends of digital game-based language learning (DGBLL): a scientometrics review},
+  author      = {Li, Ke and Peterson, Mark and Wang, Qiao and Wang, Haitao},
+  journal     = {Computer Assisted Language Learning},
+  pages       = {1--30},
+  year        = {2023},
+  publisher   = {Taylor \& Francis},
+  html        = {https://www.tandfonline.com/doi/full/10.1080/09588221.2023.2299436},
+  doi         = {10.1080/09588221.2023.2299436}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+
+@article{wang2023role,
+  bibtex_show = {true},
+  title       = {The role of live transcripts in synchronous online L2 classrooms: Learning outcomes and learner perceptions},
+  author      = {Wang, Qiao and Chen, Yijun},
+  journal     = {Education and Information Technologies},
+  volume      = {28},
+  number      = {11},
+  pages       = {14783--14804},
+  year        = {2023},
+  month       = apr,
+  publisher   = {Springer},
+  html        = {https://link.springer.com/article/10.1007/s10639-023-11784-8},
+  pdf         = {https://link.springer.com/content/pdf/10.1007/s10639-023-11784-8.pdf},
+  doi         = {10.1007/s10639-023-11784-8}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  selected={true}
+ @article{wang2023content,
+  bibtex_show = {true},
+  title       = {A content-controlled monolingual comparable corpus approach to comparing learner and proficient argumentative writing},
+  volume      = {2},
+  issn        = {2772-7661},
+  html        = {http://dx.doi.org/10.1016/j.rmal.2023.100053},
+  doi         = {10.1016/j.rmal.2023.100053},
+  number      = {2},
+  journal     = {Research Methods in Applied Linguistics},
+  publisher   = {Elsevier BV},
+  author      = {Wang, Qiao and Anthony, Laurence and Arshad, Nurul Ihsan},
+  year        = {2023},
+  month       = aug,
+  pages       = {100053},
+  dimension   = {true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inbook{peterson2023use,
+  bibtex_show = {true},
+  title       = {The Use of Network-Based Virtual Worlds in Second Language Education: A Research Review},
+  isbn        = {9781668475980},
+  html        = {http://dx.doi.org/10.4018/978-1-6684-7597-3.ch011},
+  doi         = {10.4018/978-1-6684-7597-3.ch011},
+  booktitle   = {Research Anthology on Virtual Environments and Building the Metaverse},
+  publisher   = {IGI Global},
+  author      = {Peterson, Mark and Wang, Qiao and Mirzaei, Maryam Sadat},
+  year        = {2022},
+  month       = dec,
+  pages       = {218–236}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+ @article{wang2022use,
+  bibtex_show = {true},
+  title       = {The use of semantic similarity tools in automated content scoring of fact-based essays written by EFL learners},
+  volume      = {27},
+  issn        = {1573-7608},
+  html        = {http://dx.doi.org/10.1007/s10639-022-11179-1},
+  doi         = {10.1007/s10639-022-11179-1},
+  number      = {9},
+  journal     = {Education and Information Technologies},
+  publisher   = {Springer Science and Business Media LLC},
+  author      = {Wang, Qiao},
+  year        = {2022},
+  month       = jun,
+  pages       = {13021–13049}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+ @inproceedings{rose2022evaluation,
+  bibtex_show = {true},
+  series      = {UbiComp/ISWC ’22},
+  title       = {Evaluation Dataset of Multiple-Choice Cloze Items for Vocabulary Training and Testing},
+  html        = {http://dx.doi.org/10.1145/3544793.3560378},
+  doi         = {10.1145/3544793.3560378},
+  booktitle   = {Proceedings of the 2022 ACM International Joint Conference on Pervasive and Ubiquitous Computing},
+  publisher   = {ACM},
+  author      = {Rose, Ralph L. and Orita, Naho and Sugawara, Ayaka and Wang, Qiao},
+  year        = {2022},
+  month       = sep,
+  collection  = {UbiComp/ISWC ’22}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+ @article{li2022out,
+  bibtex_show = {true},
+  title       = {Out-of-school language learning through digital gaming: a case study from an activity theory perspective},
+  issn        = {1744-3210},
+  html        = {http://dx.doi.org/10.1080/09588221.2022.2067181},
+  doi         = {10.1080/09588221.2022.2067181},
+  journal     = {Computer Assisted Language Learning},
+  publisher   = {Informa UK Limited},
+  author      = {Li, Ke and Peterson, Mark and Wang, Qiao},
+  year        = {2022},
+  month       = may,
+  pages       = {1–29}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+ @inbook{peterson2022review,
+  bibtex_show = {true},
+  title       = {A Review of Research on the Application of Digital Games in Foreign Language Education},
+  html        = {http://dx.doi.org/10.4018/978-1-6684-3710-0.ch094},
+  doi         = {10.4018/978-1-6684-3710-0.ch094},
+  booktitle   = {Research Anthology on Developments in Gamification and Game-Based Learning},
+  publisher   = {IGI Global},
+  author      = {Peterson, Mark and White, Jeremy and Mirzaei, Maryam Sadat and Wang, Qiao},
+  year        = {2022},
+  pages       = {1948–1971}
+}
+
+
+ @article{li2021using,
+  bibtex_show = {true},
+  title       = {Using Community of Inquiry to Scaffold Language Learning in Out-of-School Gaming: A Case Study},
+  volume      = {11},
+  issn        = {2155-6857},
+  html        = {http://dx.doi.org/10.4018/ijgbl.2021010103},
+  doi         = {10.4018/ijgbl.2021010103},
+  number      = {1},
+  journal     = {International Journal of Game-Based Learning},
+  publisher   = {IGI Global},
+  author      = {Li, Ke and Peterson, Mark and Wang, Qiao},
+  year        = {2021},
+  month       = jan,
+  pages       = {31–52}
+}
+
+ @article{wang2020role,
+  bibtex_show = {true},
+  title       = {The Role of Classroom-Situated Game-Based Language Learning in Promoting Students’ Communicative Competence},
+  volume      = {10},
+  issn        = {2155-7101},
+  html        = {http://dx.doi.org/10.4018/ijcallt.2020040104},
+  doi         = {10.4018/ijcallt.2020040104},
+  number      = {2},
+  journal     = {International Journal of Computer-Assisted Language Learning and Teaching},
+  publisher   = {IGI Global},
+  author      = {Wang, Qiao},
+  year        = {2020},
+  month       = apr,
+  pages       = {59–82}
+}
+
+ @inbook{peterson2022review,
+  bibtex_show = {true},
+  title       = {A Review of Research on the Application of Digital Games in Foreign Language Education},
+  html        = {http://dx.doi.org/10.4018/978-1-6684-3710-0.ch094},
+  doi         = {10.4018/978-1-6684-3710-0.ch094},
+  booktitle   = {Research Anthology on Developments in Gamification and Game-Based Learning},
+  publisher   = {IGI Global},
+  author      = {Peterson, Mark and White, Jeremy and Mirzaei, Maryam Sadat and Wang, Qiao},
+  year        = {2022},
+  pages       = {1948–1971}
+}
+
+@article{wang2019classroom,
+  bibtex_show = {true},
+  title       = {Classroom intervention for integrating simulation games into language classrooms: An exploratory study with the SIMS 4},
+  html        = {https://api.semanticscholar.org/CorpusID:207912526},
+  author      = {Wang, Qiao},
+  journal     = {CALL-EJ},
+  volume      = {20},
+  number      = {2},
+  pages       = {101--127},
+  year        = {2019},
+  publisher   = {Asia-Pacific Association for Computer-Assisted Language Learning (APACALL)}
+}
+
+@inbook{peterson2019use,
+  bibtex_show = {true},
+  title       = {The Use of Network-Based Virtual Worlds in Second Language Education: A Research Review},
+  issn        = {2372-1111},
+  html        = {http://dx.doi.org/10.4018/978-1-5225-7286-2.ch001},
+  doi         = {10.4018/978-1-5225-7286-2.ch001},
+  booktitle   = {Advances in Linguistics and Communication Studies},
+  publisher   = {IGI Global},
+  author      = {Peterson,  Mark and Wang,  Qiao and Mirzaei,  Maryam Sadat},
+  year        = {2019},
+  pages       = {1–25}
 }
