--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,21 @@
 ---
 ---
+@article{wang2024assessing,
+  bibtex_show = {true},
+  title       = {Assessing the Efficacy of Grammar Error Correction: A Human Evaluation Approach in the Japanese Context},
+  author      = {Wang, Qiao and Yuan, Zheng},
+  journal     = {arXiv preprint arXiv:2402.18101},
+  year        = {2024},
+  html        = {https://doi.org/10.48550/arXiv.2402.18101}
+}
 
 @article{wang2024automated,
   bibtex_show = {true},
   title       = {Automated Generation of Multiple-Choice Cloze Questions for Assessing English Vocabulary Using GPT-turbo 3.5},
   author      = {Wang, Qiao and Rose, Ralph and Orita, Naho and Sugawara, Ayaka},
   journal     = {arXiv preprint arXiv:2403.02078},
-  year        = {2024}
+  year        = {2024},
+  html        = {https://arxiv.org/abs/2403.02078}
 }
 
 @article{li2023mapping,
@@ -19,6 +28,17 @@
   publisher   = {Taylor \& Francis},
   html        = {https://www.tandfonline.com/doi/full/10.1080/09588221.2023.2299436},
   doi         = {10.1080/09588221.2023.2299436}
+}
+
+@article{wang2023role2,
+  bibtex_show = {true},
+  title       = {The role of computer games in Chinese students’ narrative writing: A case study with The Sims},
+  journal     = {Osaka JALT Journal},
+  volume      = {10},
+  author      = {Wang, Qiao and Li, Ke},
+  year        = {2023},
+  month       = dec,
+  pdf         = {http://www.osakajalt.org/storage/journal/Wang%20and%20Li%202023.pdf}
 }
 
 
