Add abbr for papers.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,6 +23,7 @@
   title       = {Mapping the research trends of digital game-based language learning (DGBLL): a scientometrics review},
   author      = {Li, Ke and Peterson, Mark and Wang, Qiao and Wang, Haitao},
   journal     = {Computer Assisted Language Learning},
+  abbr        = {CALL},
   pages       = {1--30},
   year        = {2023},
   publisher   = {Taylor \& Francis},
@@ -47,6 +48,7 @@
   title       = {The role of live transcripts in synchronous online L2 classrooms: Learning outcomes and learner perceptions},
   author      = {Wang, Qiao and Chen, Yijun},
   journal     = {Education and Information Technologies},
+  abbr        = {EAIT},
   volume      = {28},
   number      = {11},
   pages       = {14783--14804},
@@ -99,6 +101,7 @@
   doi         = {10.1007/s10639-022-11179-1},
   number      = {9},
   journal     = {Education and Information Technologies},
+  abbr        = {EAIT},
   publisher   = {Springer Science and Business Media LLC},
   author      = {Wang, Qiao},
   year        = {2022},
@@ -127,6 +130,7 @@
   html        = {http://dx.doi.org/10.1080/09588221.2022.2067181},
   doi         = {10.1080/09588221.2022.2067181},
   journal     = {Computer Assisted Language Learning},
+  abbr        = {CALL},
   publisher   = {Informa UK Limited},
   author      = {Li, Ke and Peterson, Mark and Wang, Qiao},
   year        = {2022},
@@ -172,6 +176,7 @@
   doi         = {10.4018/ijcallt.2020040104},
   number      = {2},
   journal     = {International Journal of Computer-Assisted Language Learning and Teaching},
+  abbr        = {IJCALLT},
   publisher   = {IGI Global},
   author      = {Wang, Qiao},
   year        = {2020},
@@ -197,6 +202,7 @@
   html        = {https://api.semanticscholar.org/CorpusID:207912526},
   author      = {Wang, Qiao},
   journal     = {CALL-EJ},
+  abbr        = {CALL-EJ},
   volume      = {20},
   number      = {2},
   pages       = {101--127},
