Update wording of tools.

--- a/_tools/2023-awe.md
+++ b/_tools/2023-awe.md
@@ -15,4 +15,4 @@ A Python program for providing summative assessment of TOEFL independent writing
 The program currently achieves a QWK of 0.78 and an RMSE of 0.57 against ground truth scores from ETS, rivaling and even surpassing ETS’s e-rater engine.
 
 - The source code is available at: [{{ page.github }}]({{ page.github }})
-<!-- - A demo is available at: [{{ page.demo_url }}]({{ page.demo_url }}) -->
+<!-- - A web user interface is available at: [{{ page.demo_url }}]({{ page.demo_url }}) -->
