Add new paper: wang2024effectiveness

--- a/_tools/2023-awe.md
+++ b/_tools/2023-awe.md
@@ -6,7 +6,7 @@ description: An LLM-based AWE program for TOEFL Independent Writing
 # img: assets/img/12.jpg
 importance: 2
 category: work
-related_publications: false
+related_publications: true
 ---
 
 ## What is {{ page.title }}
@@ -16,3 +16,4 @@ The program currently achieves a QWK of 0.78 and an RMSE of 0.57 against ground 
 
 - The source code is available at: [{{ page.github }}]({{ page.github }})
 <!-- - A web user interface is available at: [{{ page.demo_url }}]({{ page.demo_url }}) -->
+- Related publications: {% cite wang2024effectiveness %}.
