Add new publication.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@inproceedings{wang2024reducing,
+  bibtex_show  = {true},
+  title        = {Reducing Redundancy in Japanese-to-English Translation: A Multi-Pipeline Approach for Translating Repeated Elements in Japanese},
+  author       = {Wang, Qiao and Huang, Yixuan and Yuan, Zheng},
+  booktitle    = {Proceedings of the Ninth Conference on Machine Translation (WMT)},
+  year         = {2024},
+  pages        = {1047--1055},
+  pdf          = {https://www2.statmt.org/wmt24/pdf/2024.wmt-1.107.pdf},
+  organization = {Association for Computational Linguistics},
+  abstract     = {This paper presents a multi-pipeline Japanese-to-English machine translation (MT) system designed to address the challenge of translating repeated elements from Japanese into fluent and lexically diverse English. The system was developed as part of the Non-Repetitive Translation Task at WMT24, which focuses on minimizing redundancy while maintaining high translation quality. Our approach utilizes MeCab, the de facto Natural Language Processing (NLP) tool for Japanese, to identify repeated elements, and Claude Sonnet 3.5, a Large Language Model (LLM), for translation and proofreading. The system effectively accomplishes the shared task by identifying and translating in a diversified manner 89.79\% of the 470 repeated instances in the test dataset and achieving an average translation quality score of 4.60 out of 5, significantly surpassing the baseline score of 3.88. The analysis also revealed challenges, particularly in identifying standalone noun-suffix elements and occasional cases of consistent translations or mistranslations.}
+}
+
 @article{wang2024sequence,
   bibtex_show = {false},
   title       = {Sequence Tagging Approach in Grammar Error Detection: Identifying Areas of Improvement for the State-of-the-Art},
@@ -123,7 +135,7 @@
   author            = {Peterson, Mark and Wang, Qiao and Mirzaei, Maryam Sadat},
   year              = {2023},
   month             = dec,
-  pages             = {218–236},
+  pages             = {218--236},
   google_scholar_id = {Tyk-4Ss8FVUC}
 }
 
@@ -143,7 +155,7 @@
   author            = {Wang, Qiao},
   year              = {2022},
   month             = jun,
-  pages             = {13021–13049},
+  pages             = {13021--13049},
   google_scholar_id = {u-x6o8ySG0sC}
 }
 
@@ -176,7 +188,7 @@
   author            = {Li, Ke and Peterson, Mark and Wang, Qiao},
   year              = {2022},
   month             = may,
-  pages             = {1–29},
+  pages             = {1--29},
   google_scholar_id = {qjMakFHDy7sC}
 }
 
@@ -190,7 +202,7 @@
   publisher         = {IGI Global},
   author            = {Peterson, Mark and White, Jeremy and Mirzaei, Maryam Sadat and Wang, Qiao},
   year              = {2022},
-  pages             = {1948–1971},
+  pages             = {1948--1971},
   google_scholar_id = {2osOgNQ5qMEC}
 }
 
@@ -208,7 +220,7 @@
   author            = {Li, Ke and Peterson, Mark and Wang, Qiao},
   year              = {2021},
   month             = jan,
-  pages             = {31–52},
+  pages             = {31--52},
   google_scholar_id = {9yKSN-GCB0IC}
 }
 
@@ -227,7 +239,7 @@
   author            = {Wang, Qiao},
   year              = {2020},
   month             = apr,
-  pages             = {59–82},
+  pages             = {59--82},
   google_scholar_id = {UeHWp8X0CEIC}
 }
 
@@ -258,5 +270,5 @@
   publisher   = {IGI Global},
   author      = {Peterson,  Mark and Wang,  Qiao and Mirzaei,  Maryam Sadat},
   year        = {2019},
-  pages       = {1–25}
+  pages       = {1--25}
 }
