Update the apostrophe mark in bibliography entries for consistency.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@
   author      = {Wang, Qiao and Gayed, John},
   year        = {2024},
   journal     = {Computer Assisted Language Learning},
-  abstract    = {To address the long-standing challenge facing traditional automated writing evaluation (AWE) systems in assessing higher-order thinking, this study built an AWE system for scoring argumentative essays by finetuning the GPT-3.5 Large Language Model and compared the system’s effectiveness with that of the non-finetuned GPT-3.5 and GPT-4 base models via zero-shot prompting methods. The dataset used was the TOEFL Public Writing Dataset provided by Education Testing Service, containing 480 argumentative essays with ground truth scores under two essay prompts. Three finetuned models were generated: two finetuned exclusively on either prompt and one on both. All finetuned and base models were used to score the remaining essays after finetuning and their scoring effectiveness was compared with ground truth scores as the benchmark. The impact of the variety of finetuning prompts and the robustness of finetuned models were also explored. Results showed a 100% consistency of all models in two scoring sessions. More importantly, the finetuned models significantly outperformed the base models in accuracy and reliability. The best-performing model, finetuned on prompt 1, showed an RMSE of 0.57, a percentage agreement (score discrepancy≤0.5) of 84.72% and a QWK of 0.78. Further, the model finetuned on both prompts did not exhibit enhanced performance, and the two models finetuned on one prompt remained robust when scoring essays from the alternative prompt. These results suggest 1) task-specific finetuning for AWE is beneficial; 2) finetuning does not require a large variety of essay prompts; and 3) fine-tuned models are robust to unseen essays.},
+  abstract    = {To address the long-standing challenge facing traditional automated writing evaluation (AWE) systems in assessing higher-order thinking, this study built an AWE system for scoring argumentative essays by finetuning the GPT-3.5 Large Language Model and compared the system's effectiveness with that of the non-finetuned GPT-3.5 and GPT-4 base models via zero-shot prompting methods. The dataset used was the TOEFL Public Writing Dataset provided by Education Testing Service, containing 480 argumentative essays with ground truth scores under two essay prompts. Three finetuned models were generated: two finetuned exclusively on either prompt and one on both. All finetuned and base models were used to score the remaining essays after finetuning and their scoring effectiveness was compared with ground truth scores as the benchmark. The impact of the variety of finetuning prompts and the robustness of finetuned models were also explored. Results showed a 100% consistency of all models in two scoring sessions. More importantly, the finetuned models significantly outperformed the base models in accuracy and reliability. The best-performing model, finetuned on prompt 1, showed an RMSE of 0.57, a percentage agreement (score discrepancy≤0.5) of 84.72% and a QWK of 0.78. Further, the model finetuned on both prompts did not exhibit enhanced performance, and the two models finetuned on one prompt remained robust when scoring essays from the alternative prompt. These results suggest 1) task-specific finetuning for AWE is beneficial; 2) finetuning does not require a large variety of essay prompts; and 3) fine-tuned models are robust to unseen essays.},
   html        = {https://doi.org/10.1080/09588221.2024.2371395}
 }
 
@@ -75,13 +75,13 @@
 
 @article{wang2023role2,
   bibtex_show       = {true},
-  title             = {The role of computer games in Chinese students’ narrative writing: A case study with The Sims},
+  title             = {The role of computer games in Chinese students' narrative writing: A case study with The Sims},
   journal           = {Osaka JALT Journal},
   volume            = {10},
   author            = {Wang, Qiao and Li, Ke},
   year              = {2023},
   month             = dec,
-  abstract          = {This single-participant study explores the role of story-rich computer games in an EFL narrative writing course for Chinese university students. In a two-month English writing class using the game The Sims 4, a participant received instruction on gameplay techniques andlanguage, completedgame quests set by the teacher, wrote 14 narratives based on gameplay events, and receivedall-encompassing corrective feedback on her writing samples. A pre-test on game vocabulary and two writing preand post-tests were also administered. The researchers evaluated the participant’s EFL narrative writing performance with an in-depth analysis of linguistic features using NLP tools which included syntax, lexicon, cohesion, and content. A follow-up interview was conducted to complement the results from the writing evaluation and to provide information on the participant’s perception and attitude towards the GBW class. Results show that while there was no consistent improvement in the participant’s EFL narrative writing performance, the rich stories and contextualized vocabulary in the game contributed to the participant’s content and lexicon and helped the participant to better understand howtowritenarratives.},
+  abstract          = {This single-participant study explores the role of story-rich computer games in an EFL narrative writing course for Chinese university students. In a two-month English writing class using the game The Sims 4, a participant received instruction on gameplay techniques andlanguage, completedgame quests set by the teacher, wrote 14 narratives based on gameplay events, and receivedall-encompassing corrective feedback on her writing samples. A pre-test on game vocabulary and two writing preand post-tests were also administered. The researchers evaluated the participant's EFL narrative writing performance with an in-depth analysis of linguistic features using NLP tools which included syntax, lexicon, cohesion, and content. A follow-up interview was conducted to complement the results from the writing evaluation and to provide information on the participant's perception and attitude towards the GBW class. Results show that while there was no consistent improvement in the participant's EFL narrative writing performance, the rich stories and contextualized vocabulary in the game contributed to the participant's content and lexicon and helped the participant to better understand howtowritenarratives.},
   pdf               = {http://www.osakajalt.org/storage/journal/Wang%20and%20Li%202023.pdf},
   google_scholar_id = {d1gkVwhDpl0C}
 }
@@ -98,7 +98,7 @@
   year        = {2023},
   month       = apr,
   publisher   = {Springer},
-  abstract    = {This study explored the role of live transcripts in online synchronous academic English classrooms by focusing on how automatically generated live transcripts influence the learning outcomes of lower-proficiency and higher-proficiency learners and on their perceptions towards live transcripts. The study adop ted a 2 × 2 factorial design, with the two factors being learner proficiency (high vs. low) and availability of live transcription (presence and absence). The participants were 129 second-year Japanese university students from four synchronous classes taught on Zoom by the same teacher under an academic English reading course. Learning outcomes in this study were evaluated according to the course syllabus through grades and participation in class activities. A questionnaire consisting of nine Likert-scale questions and a comment box was administered to explore participants’ perceived usefulness of, perceived ease of use of, and perceived reliance on live transcripts. Results showed that contrary to previous studies reporting the effectiveness of captioned audiovisual materials in L2 learning, live transcripts as a special type of captions were not effective in promoting the grades of learners of either proficiency. However, it significantly improved the activity participation of lower-proficiency learners, but not that of higher-proficiency learners. Questionnaire results showed that there were no significant differences between learners of two proficiencies in their perceptions towards live transcription, which contradicts previous findings that lower-proficiency learners tend to rely more on captions. Besides enhancement of lecture comprehension, participants reported innovative uses of live transcripts such as screenshots with transcripts for notetaking purposes and transcripts downloaded for later review.},
+  abstract    = {This study explored the role of live transcripts in online synchronous academic English classrooms by focusing on how automatically generated live transcripts influence the learning outcomes of lower-proficiency and higher-proficiency learners and on their perceptions towards live transcripts. The study adop ted a 2 × 2 factorial design, with the two factors being learner proficiency (high vs. low) and availability of live transcription (presence and absence). The participants were 129 second-year Japanese university students from four synchronous classes taught on Zoom by the same teacher under an academic English reading course. Learning outcomes in this study were evaluated according to the course syllabus through grades and participation in class activities. A questionnaire consisting of nine Likert-scale questions and a comment box was administered to explore participants' perceived usefulness of, perceived ease of use of, and perceived reliance on live transcripts. Results showed that contrary to previous studies reporting the effectiveness of captioned audiovisual materials in L2 learning, live transcripts as a special type of captions were not effective in promoting the grades of learners of either proficiency. However, it significantly improved the activity participation of lower-proficiency learners, but not that of higher-proficiency learners. Questionnaire results showed that there were no significant differences between learners of two proficiencies in their perceptions towards live transcription, which contradicts previous findings that lower-proficiency learners tend to rely more on captions. Besides enhancement of lecture comprehension, participants reported innovative uses of live transcripts such as screenshots with transcripts for notetaking purposes and transcripts downloaded for later review.},
   html        = {https://link.springer.com/article/10.1007/s10639-023-11784-8},
   pdf         = {https://link.springer.com/content/pdf/10.1007/s10639-023-11784-8.pdf},
   doi         = {10.1007/s10639-023-11784-8}
@@ -109,7 +109,7 @@
   title             = {A content-controlled monolingual comparable corpus approach to comparing learner and proficient argumentative writing},
   volume            = {2},
   issn              = {2772-7661},
-  abstract          = {This mixed-methods study approaches the differences between learner and proficient argumentative writing by building a content-controlled monolingual comparable corpus (CCMCC) that contains learner-teacher sample pairs of the same semantic content. Twenty-seven learner samples were collected from 27 Chinese university students who each wrote on one topic from the second writing task of IELTS Academic. To generate content-controlled teacher samples, an experienced teacher revised or rewrote each learner sample after confirming the ideas learners intended to express through individual and face-to-face communication with each learner. Then, a native speaker checked the language of the teacher samples. In data analysis, each learner-teacher sample pair was analyzed using Coh-Metrix to generate statistics in 45 indices under text length, syntax, lexicon, and cohesion, after which a shortlist of indices of both statistically and practically significant differences was identified. Qualitatively, the researchers identified the differences through side-by-side comparisons of sample pairs and coded the important patterns in the differences to explore their underlying reasons. This approach generated different quantitative results from previous corpus-based comparative writing studies, such as the ineffectiveness of cohesion indices to distinguish learner and proficient writing. Qualitative analysis further revealed noteworthy findings including the lack of concision in learner writing and learners’ unfamiliarity with using prepositional phrases to express actions. The advantages, limitations and implications of this approach are discussed.},
+  abstract          = {This mixed-methods study approaches the differences between learner and proficient argumentative writing by building a content-controlled monolingual comparable corpus (CCMCC) that contains learner-teacher sample pairs of the same semantic content. Twenty-seven learner samples were collected from 27 Chinese university students who each wrote on one topic from the second writing task of IELTS Academic. To generate content-controlled teacher samples, an experienced teacher revised or rewrote each learner sample after confirming the ideas learners intended to express through individual and face-to-face communication with each learner. Then, a native speaker checked the language of the teacher samples. In data analysis, each learner-teacher sample pair was analyzed using Coh-Metrix to generate statistics in 45 indices under text length, syntax, lexicon, and cohesion, after which a shortlist of indices of both statistically and practically significant differences was identified. Qualitatively, the researchers identified the differences through side-by-side comparisons of sample pairs and coded the important patterns in the differences to explore their underlying reasons. This approach generated different quantitative results from previous corpus-based comparative writing studies, such as the ineffectiveness of cohesion indices to distinguish learner and proficient writing. Qualitative analysis further revealed noteworthy findings including the lack of concision in learner writing and learners' unfamiliarity with using prepositional phrases to express actions. The advantages, limitations and implications of this approach are discussed.},
   html              = {http://dx.doi.org/10.1016/j.rmal.2023.100053},
   doi               = {10.1016/j.rmal.2023.100053},
   number            = {2},
@@ -159,7 +159,7 @@
 
  @inproceedings{rose2022evaluation,
   bibtex_show       = {true},
-  series            = {UbiComp/ISWC ’22},
+  series            = {UbiComp/ISWC '22},
   title             = {Evaluation Dataset of Multiple-Choice Cloze Items for Vocabulary Training and Testing},
   abstract          = {Vocabulary learning is a typical part of nearly any second language learning curriculum. This entails methodologies and materials for training and testing vocabulary knowledge in learners. In large-scale programs, the preparation of such materials can be labor intensive and thus automatic means of generation are desirable. VocaTT (Vocabulary Training and Testing) is an ongoing project to use machine learning methods to generate novel multiple choice cloze (i.e., fill-in-the-blank) items for use in second language learning programs. This paper describes the ongoing creation of a gold standard set of multiple-choice cloze items to be used in training a machine learning algorithm. Machine-generated multiple choice cloze items were reviewed by two experienced language teachers, who evaluated each item for well-formedness (i.e., suitability as multiple-choice cloze test item) with three options: reject as unsalvageable, keep as-is, or revise into a well-formed item as they thought best. Results for a 600-item set that both checkers evaluated show moderate agreement on the question of rejection but slight agreement for keeping as-is. For revised items, the agreement on what type of revisions to make was slight to fair. In an expanded set of 2,792 items, checkers judged most items as needing revision but made varying kinds of revisions to yield well-formed items. Interested researchers may contact the authors to inquire about how they may access and use the evaluation dataset.},
   html              = {http://dx.doi.org/10.1145/3544793.3560378},
@@ -169,7 +169,7 @@
   author            = {Rose, Ralph L. and Orita, Naho and Sugawara, Ayaka and Wang, Qiao},
   year              = {2022},
   month             = sep,
-  collection        = {UbiComp/ISWC ’22},
+  collection        = {UbiComp/ISWC '22},
   google_scholar_id = {zYLM7Y9cAGgC}
 }
 
@@ -224,7 +224,7 @@
 
  @article{wang2020role,
   bibtex_show       = {true},
-  title             = {The Role of Classroom-Situated Game-Based Language Learning in Promoting Students’ Communicative Competence},
+  title             = {The Role of Classroom-Situated Game-Based Language Learning in Promoting Students' Communicative Competence},
   volume            = {10},
   issn              = {2155-7101},
   abstract          = {The study is the second in a series of mixed-methods studies on the integration of The Sims 4, a life-simulation game, into language classrooms. In this study, the researcher explores the effect of game-based language learning (GBLL) on students' English communicative competence from three aspects, interaction, fluency and content, in a Japanese university. In class, students received instruction from the teacher on game language and gameplay skills, played the game on their own and presented gameplay stories. The presentations were recorded for evaluation. Surveys were also administered for students' perceptions on the GBLL classroom. Results showed that no clear improvement in communicative competence was suggested by quantitative evaluation. Qualitatively data, however, indicated that the game afforded students interesting events and proper expressions in presentations and that the teacher played a vital role in ensuring ample interactional opportunities and linguistic support. Suggestions for future research in classroom-situated GBLL were also proposed.},
