Add homepage link and enhance AWE description with WrAFT details, including scoring performance and feedback features. Include new screenshots for system architecture, user input, surface-level, and deep-level feedback pages.

--- a/_tools/2023-awe.md
+++ b/_tools/2023-awe.md
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: AWE
+homepage: https://awe.judywang.jp/
 github: https://github.com/judywq/automated-essay-evalution
 description: An LLM-based AWE program for TOEFL Independent Writing
 # img: assets/img/12.jpg
@@ -11,9 +12,45 @@ related_publications: true
 
 ## What is {{ page.title }}
 
-A Python program for providing summative assessment of TOEFL independent writing essays. The program is built on a finetuned GPT-3.5 model with official dataset from ETS.
-The program currently achieves a QWK of 0.78 and an RMSE of 0.57 against ground truth scores from ETS, rivaling and even surpassing ETS’s e-rater engine.
+In May 2025, the PI led a team in developing **WrAFT** (Writing Assessment and Feedback Tool), a modular
+LLM-powered AWE system. The system includes a fine-tuned scoring model trained on proprietary ETS
+datasets, a surface-level feedback module in the form of grammatical and mechanical corrections and a deep-level
+feedback module on higher-order thinking. 
+
+Significance: WrAFT represents the world's first publicly available AWE system providing ETS-benchmarked
+scoring and comprehensive feedback through an interactive UI for argumentative writing. The scoring module
+shows superior performance with a Quadratic Weighted Kappa (QWK) of 0.84 in agreement with ETS rater
+scores, significantly exceeding ETS's own QWK threshold of 0.7 for their commercial system Criterion.
 
 - The source code is available at: [{{ page.github }}]({{ page.github }})
-<!-- - A web user interface is available at: [{{ page.demo_url }}]({{ page.demo_url }}) -->
+- A web user interface is available at: [{{ page.homepage }}]({{ page.homepage }})
 - Related publications: {% cite wang2024effectiveness %}.
+
+## Screenshots
+
+### System Architecture
+
+<img src="/assets/img/awe/System Architecture.png" alt="System Architecture" style="width: 100%; max-width: 800px;">
+
+### User Input Page
+
+<img src="/assets/img/awe/user input screenshot.jpg" alt="User Input Screenshot" style="width: 100%; max-width: 1000px;">
+
+A user can input the essay prompt and their writing (either by uploading a Word document or pasting text directly) in the interface. A list of recent evaluations is shown on the right sidebar. The sample essay in the screenshot is sourced from a Chinese university student, independent from the TOEFL writing dataset used in this study.
+
+---
+
+### Surface-Level Feedback Page – Track Changes
+
+<img src="/assets/img/awe/surface-level screenshot.png" alt="Surface-Level Feedback Screenshot" style="width: 100%; max-width: 1000px;">
+
+The surface-level feedback can be displayed in three modes; the figure shows the track changes mode, displaying each edit operation. The short explanation shown when the mouse hovers upon a certain edit is an idea for future work not included in the present study.
+
+---
+
+### Deep-Level Feedback Page
+
+<img src="/assets/img/awe/deep-level screenshot.png" alt="Deep-Level Feedback Screenshot" style="width: 100%; max-width: 1000px;">
+
+The deep-level feedback page displays feedback comments for each paragraph on the left sidebar and micro feedback on the right sidebar when the mouse hovers over a specific text element. Highlights in different colors represent multiple traits of feedback. The page also shows a tab for "Revised Essay" (LLM-revised essay based on deep-level feedback), which is a new feature under development not included in the present work.
+
