Revise AWE description in 2023-awe.md for clarity and conciseness; add new 2025-gen-quest.md file detailing an LLM-powered text-adventure game for language learning, including features and demo URL.

--- a/_tools/2023-awe.md
+++ b/_tools/2023-awe.md
@@ -12,15 +12,10 @@ related_publications: true
 
 ## What is {{ page.title }}
 
-In May 2025, the PI led a team in developing **WrAFT** (Writing Assessment and Feedback Tool), a modular
+**WrAFT** (Writing Assessment and Feedback Tool) is a modular
 LLM-powered AWE system. The system includes a fine-tuned scoring model trained on proprietary ETS
 datasets, a surface-level feedback module in the form of grammatical and mechanical corrections and a deep-level
 feedback module on higher-order thinking. 
-
-Significance: WrAFT represents the world's first publicly available AWE system providing ETS-benchmarked
-scoring and comprehensive feedback through an interactive UI for argumentative writing. The scoring module
-shows superior performance with a Quadratic Weighted Kappa (QWK) of 0.84 in agreement with ETS rater
-scores, significantly exceeding ETS's own QWK threshold of 0.7 for their commercial system Criterion.
 
 - The source code is available at: [{{ page.github }}]({{ page.github }})
 - A web user interface is available at: [{{ page.homepage }}]({{ page.homepage }})
