Update tool name.

--- a/_tools/2023-awe.md
+++ b/_tools/2023-awe.md
@@ -12,10 +12,8 @@ related_publications: true
 
 ## What is {{ page.title }}
 
-**WrAFT** (Writing Assessment and Feedback Tool) is a modular
-LLM-powered AWE system. The system includes a fine-tuned scoring model trained on proprietary ETS
-datasets, a surface-level feedback module in the form of grammatical and mechanical corrections and a deep-level
-feedback module on higher-order thinking. 
+AWE is a tool that offers ETS-benchmarked scoring (from 0-5 based on previous TOEFL Independent Writing) and comprehensive feedback to argumentative essay.
+The tool is anonymized for several manuscripts under review right now. 
 
 - The source code is available at: [{{ page.github }}]({{ page.github }})
 - A web user interface is available at: [{{ page.homepage }}]({{ page.homepage }})
