Add homepage link to AWE documentation and update user interface note

--- a/_tools/2023-awe.md
+++ b/_tools/2023-awe.md
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: AWE
+homepage: https://awe.judywang.jp/
 github: https://github.com/judywq/automated-essay-evalution
 description: An LLM-based AWE program for TOEFL Independent Writing
 # img: assets/img/12.jpg
@@ -14,6 +15,7 @@ related_publications: true
 AWE is a tool that offers ETS-benchmarked scoring (from 0-5 based on previous TOEFL Independent Writing) and comprehensive feedback to argumentative essay.
 The tool is anonymized for several manuscripts under review right now. 
 
+- A web user interface is available at: [{{ page.homepage }}]({{ page.homepage }})
 - The source code is available at: [{{ page.github }}]({{ page.github }})
 - Related publications: {% cite wang2024effectiveness %}.
 
